--- a/kangen/index.html
+++ b/kangen/index.html
@@ -16,7 +16,7 @@
          -->
    </head>
    <body>
-      <div id="bodyblur"><img src="https://i.postimg.cc/wMSSWX1B/IMG-20220211-161601-480.jpg" width="100%" height="100%"/></div>
+      <div id="bodyblur"><img src="https://pin.it/6SmhkU3qS" width="100%" height="100%"/></div>
       <!-- Isi Konten -->
       <div id='Content'>
          <div class="image"><img src="https://i.postimg.cc/G2jtnpFr/0906-peacegoma.gif" width="130px" height="130px"/></div>
